dev/geodata-app-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: geodata-app-deployment
  namespace: geodata
  labels:
    app: geodata-app
  annotations:
    configmap.reloader.stakater.com/reload: "geodata-app-config"
    secret.reloader.stakater.com/reload: "geodata-app-secret"
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      deploy: geodata-app-pod
  template:
    metadata:
      labels:
        app: geodata-app-pod
        deploy: geodata-app-pod
    spec:
      containers:
        - name: geodata-app
          image: ag04/geodata-app:0.0.6
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: '384Mi'
              cpu: '400m'
            limits:
              memory: '768Mi'
              cpu: '1'
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 3
