dev/geodata-service.yml
apiVersion: v1
kind: Service
metadata:
  name: geodata-app-service
  namespace: geodata
  labels:
    app: geodata-app-service
spec:
  selector:
    app: geodata-app-pod
  ports:
    - name: http
      port: 8088
