dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geodata-ingress
  namespace: geodata
  labels:
    app: ingress
spec:
  rules:
    - host: geodata.local-minikube.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geodata-app-service
                port:
                  number: 8088
